<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bidir_sliding_layout"
    tools:context=".TVRemoteControlActivity" >

    <RelativeLayout
        android:id="@+id/right_menu"
        android:layout_width="150dip"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:background="#00ffcc"
        android:visibility="gone" >
        <include layout="@layout/sidemenu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="65dip"
            android:background="@drawable/title_background"
            android:focusable="false"
            android:orientation="horizontal"
             >
            
             <Button
	            android:id="@+id/btn_back"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="16dip"
	            android:layout_centerVertical="true"
	            android:background="@drawable/das_title_back" 
	            android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"               
                android:ellipsize="marquee"               
                android:singleLine="true"
                android:text="@string/setting"
                android:textSize="20sp" 
                android:textColor="@color/white"
                android:layout_marginLeft="16dip"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

       
        
        <ImageButton
            android:id="@+id/setting_sidemunubutton"
            android:layout_width="40dip"
            android:layout_height="50dip"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="310dip"
            android:visibility="gone"
            android:background="@drawable/sidemenubutton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="62dip"
            android:background="@drawable/boby_background"
            android:orientation="vertical" >

            <TextView
                style="@style/titletext"
                android:layout_marginLeft="12dp"
                android:text="@string/about" />
            
            <View android:layout_marginLeft="12dp"
                style="@style/bg_line" />
            
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                android:layout_marginLeft="12dp">

                <LinearLayout style="@style/base_layout" >

                    <TextView
                        style="@style/usertext"
                        android:text="@string/version" />

                    <TextView
                        android:id="@+id/update_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.0" />
                </LinearLayout>
                <!-- 分割线 -->

                <View style="@style/bg_line" />

                <LinearLayout
                    android:id="@+id/update_info_btn"
                    style="@style/base_layout" >

                    <TextView 
                        style="@style/usertext"
                        android:text="@string/update" />

                </LinearLayout>
                <View style="@style/bg_line" />
                
            </LinearLayout>
            
            
        </LinearLayout>
        
    </RelativeLayout>

</RelativeLayout>