<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="67.6dip"
        android:background="@drawable/title_banner"
        android:focusable="false"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/cancel_system_score"
            android:layout_width="70.5dip"
            android:layout_height="67.6dip"
            android:layout_marginLeft="0dip"
            android:background="@drawable/title_btn_back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_score"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:weightSum="1" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#F0F0F0" >

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/scorebackground"
                android:layout_gravity="center_horizontal" 
                android:layout_marginTop="25dp"/>

            <com.changhong.setting.view.RoundProgressBar
                android:id="@+id/circleProgressBar"
                android:layout_width="180dp"
                android:layout_height="180dp" />
            <ImageView 
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_marginTop="160dp"
                android:layout_marginLeft="65dp"
                android:background="#FFF0F0F0"
                />

            <TextView
                android:id="@+id/realityScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:text="60分"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="200dp"
                android:text="@string/system_running_environment"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.01"
            android:background="#005684" >

            <TableLayout
                android:id="@+id/table_layout_score"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="1dp"
                        android:background="@drawable/wifiicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="3dp"
                        android:gravity="center_vertical"
                        android:text="@string/network_environment" 
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/text_wireless_suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="2dp"
                        android:singleLine="false"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>